...

                <ImageView
                    android:id="@+id/iv_icon_interview_date"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/ICONO_FECHA_ENTREVISTA"
                    app:layout_constraintBottom_toBottomOf="@+id/il_interview_date"
                    app:layout_constraintStart_toStartOf="@+id/guia_izq"
                    app:layout_constraintTop_toTopOf="@+id/il_interview_date"
                    app:srcCompat="@drawable/ic_date_black_24dp"
                    app:tint="@color/colorSecondaryVariant" />

                <com.google.android.material.textfield.TextInputLayout
...
                    android:hint="@string/FECHA_ENTREVISTA"
                    app:endIconDrawable="@drawable/ic_date_black_24dp"
                    app:endIconMode="custom"
                    app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintEnd_toStartOf="@+id/guia_der"
                    app:layout_constraintStart_toEndOf="@+id/iv_icon_interview_date"
                    app:layout_constraintTop_toBottomOf="@+id/il_interview_type">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_interview_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:fontFamily="@font/roboto"
                        android:inputType="date"
                        android:singleLine="true"
...
