<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_interviewee"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:elevation="0dp"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
...
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/NOMBRE_PERSONA"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorOnPrimary"
        card_view:layout_constraintBottom_toBottomOf="@+id/cv_iv_interviewee_icon_name"
        card_view:layout_constraintEnd_toStartOf="@+id/iv_menu_interviewee"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toEndOf="@+id/cv_iv_interviewee_icon_name"
        card_view:layout_constraintTop_toTopOf="@+id/cv_iv_interviewee_icon_name" />

    <TextView
        android:id="@+id/cv_tv_interviewee_birth_date"
...
